--- a/JDR.css
+++ b/JDR.css
@@ -2,10 +2,13 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Arial', sans-serif;
-    background-color: #1a1a1a;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh; /* Usamos min-height en lugar de height */
+    background-color: #121212;
     color: #ffffff;
-    overflow-x: hidden;
+    font-family: 'Arial', sans-serif;
 }
 
 /* Header */
